# dspy4s

./: .env.example  .gitignore  .scalafmt.conf  ARCHITECTURE.md  LICENSE  PHASE1_PROGRESS.md  PHASE2_PROGRESS.md  PHASE3_PROGRESS.md  PHASE4_PROGRESS.md  PHASE5_PROGRESS.md  PHASE8_PROGRESS.md  PORT_BACKLOG.md  PORT_SCOPE.md  README.md  SOURCE_STUDY.md  STREAMING_POSTPONED.md  UPGRADE-3.1.3-to-3.2.1.md  build.sbt  upstream-dspy
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  DOMAIN_CONCEPTS.md  PHASE0_CONTRACTS.md  PHASE1_PROGRESS.md  PHASE2_PROGRESS.md  PHASE3_PROGRESS.md  PHASE4_PROGRESS.md  PHASE5_PROGRESS.md  (+17 more)
site/: README.md  mkdocs.yml  pyproject.toml
site/docs/: coming-from-dspy.md  index.md
site/docs/evaluation/: examples-and-data.md  metrics.md  running-evaluations.md
site/docs/get-started/: installation.md  overview.md  quickstart.md
site/docs/language-models/: adapters.md  caching-and-usage.md  configuring.md
site/docs/learn/programming/: signatures.md
site/docs/optimization/: few-shot.md  index.md  instructions.md
site/docs/programs/: composing.md  modules.md  signatures.md  tools-and-react.md
site/docs/reference/: api.md  cheatsheet.md
site/docs/runtime/: observability.md  runtime-context.md  saving-and-loading.md  streaming.md
site/docs/stylesheets/: extra.css
site/docs/tutorials/: ai-text-game.md  async.md  code-generation.md  email-extraction.md  finance-react-agent.md  llms-txt-generation.md  optimizer-tracking.md  output-refinement.md  react-vs-rlm.md  saving-workflow.md  talk-to-your-data.md
(+452 files in other folders)
